--- a/Osa2/puhelinluettelo/src/index.css
+++ b/Osa2/puhelinluettelo/src/index.css
@@ -11,3 +11,30 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+h2{
+  color: gray;
+  font-style: italic;
+}
+
+.message {
+  color: green;
+  background: lightgrey;
+  font: Serif;
+  font-size: 20px;
+  border-style: solid;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.error {
+  color: red;
+  background: lightgrey;
+  font: Serif;
+  font-size: 20px;
+  border-style: solid;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
